[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "usdr-plus"
version = "0.1.0"
description = "U_SDR+ Quantum Kernel Regression with 2D Smooth-Interaction Synthetic Regression"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "USDR+ Research Team" }
]
keywords = [
  "quantum-machine-learning",
  "kernel-regression",
  "data-reuploading",
  "pennylane",
  "quantum-kernels",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Physics",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "scipy>=1.12",
  "scikit-learn>=1.4",
  "pennylane>=0.36",
  "optuna>=3.6",
  "joblib>=1.4",
  "tqdm>=4.66",
  "openpyxl>=3.1.5",
]

[project.scripts]
usdr-plus = "main:main"

[tool.uv]
dev-dependencies = [
  "ipykernel>=6.29",
  "jupyter>=1.0",
  "pytest>=8.1",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["usdr_plus"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
